infrastructure/kube/keep-dev/atlantis-ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: atlantis-https
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "keep-dev-atlantis-external-ip-0"
spec:
  tls:
    - hosts:
      - atlantis.keep-dev.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: atlantis-tls
  backend:
    # This assumes http-svc exists and routes to healthy endpoints
    serviceName: atlantis-https
    servicePort: 8443
